[project]
name = "comfyui_huggingfacelorauploader"
version = "0.1.0" 
description = "A ComfyUI custom node to upload LoRA models to Hugging Face Hub."
authors = [
    { name = "violet0927", email = "violet0927@gmail.com" }, 
]
license = { text = "MIT License" } 
readme = "README.md" 
requires-python = ">=3.8" 
dependencies = [
    "huggingface_hub" 
]
classifiers = [ 
    "Development Status :: 4 - Beta", 
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/violet0927/ComfyUI-HuggingFaceLoraUploader" 
Repository = "https://github.com/violet0927/ComfyUI-HuggingFaceLoraUploader" 
# Issues = "https://github.com/violet0927/ComfyUI-HuggingFaceLoraUploader/issues" 
